; ModuleID = '/home/carl/AnghaBench/netdata/registry/extr_registry_internals.c_registry_fix_url.c'
source_filename = "/home/carl/AnghaBench/netdata/registry/extr_registry_internals.c_registry_fix_url.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_2__ = type { i64 }

@registry = common dso_local global %struct.TYPE_2__ zeroinitializer, align 8
@llvm.used = appending global [1 x i8*] [i8* bitcast (i8* (i8*, i64*)* @registry_fix_url to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i8* @registry_fix_url(i8* %0, i64* %1) #0 {
  %3 = alloca i8*, align 8
  %4 = alloca i64*, align 8
  %5 = alloca i64, align 8
  %6 = alloca i8*, align 8
  store i8* %0, i8** %3, align 8
  store i64* %1, i64** %4, align 8
  store i64 0, i64* %5, align 8
  %7 = load i8*, i8** %3, align 8
  %8 = call i8* @registry_fix_machine_name(i8* %7, i64* %5)
  store i8* %8, i8** %6, align 8
  %9 = load i64, i64* %5, align 8
  %10 = load i64, i64* getelementptr inbounds (%struct.TYPE_2__, %struct.TYPE_2__* @registry, i32 0, i32 0), align 8
  %11 = icmp ugt i64 %9, %10
  br i1 %11, label %12, label %17

12:                                               ; preds = %2
  %13 = load i64, i64* getelementptr inbounds (%struct.TYPE_2__, %struct.TYPE_2__* @registry, i32 0, i32 0), align 8
  store i64 %13, i64* %5, align 8
  %14 = load i8*, i8** %6, align 8
  %15 = load i64, i64* %5, align 8
  %16 = getelementptr inbounds i8, i8* %14, i64 %15
  store i8 0, i8* %16, align 1
  br label %17

17:                                               ; preds = %12, %2
  %18 = load i64*, i64** %4, align 8
  %19 = icmp ne i64* %18, null
  br i1 %19, label %20, label %23

20:                                               ; preds = %17
  %21 = load i64, i64* %5, align 8
  %22 = load i64*, i64** %4, align 8
  store i64 %21, i64* %22, align 8
  br label %23

23:                                               ; preds = %20, %17
  %24 = load i8*, i8** %6, align 8
  ret i8* %24
}

declare dso_local i8* @registry_fix_machine_name(i8*, i64*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
